# nx-monorepo

./: .bazelignore  .gitignore  BUILD.bazel  README.md  WORKSPACE  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
apps/api/: BUILD.bazel  project.json  tsconfig.app.json  tsconfig.json  webpack.config.js
apps/api/activity/: BUILD.bazel
apps/api/activity/services/test/: BUILD.bazel
apps/api/activity/test/: BUILD.bazel
apps/api/asset/: BUILD.bazel
apps/api/asset/test/: BUILD.bazel
apps/api/bucket/: BUILD.bazel
apps/api/bucket/cache/test/: BUILD.bazel
apps/api/bucket/common/: BUILD.bazel
apps/api/bucket/common/test/: BUILD.bazel
apps/api/bucket/expression/src/: parser.ts
apps/api/bucket/expression/test/: BUILD.bazel
apps/api/bucket/graphql/: BUILD.bazel
apps/api/bucket/graphql/test/: BUILD.bazel
apps/api/bucket/history/: BUILD.bazel
apps/api/bucket/hooks/: BUILD.bazel
apps/api/bucket/hooks/proto/node/: BUILD.bazel
apps/api/bucket/hooks/test/: BUILD.bazel
apps/api/bucket/realtime/: BUILD.bazel
apps/api/bucket/realtime/test/: BUILD.bazel
apps/api/bucket/services/: BUILD.bazel
apps/api/bucket/services/test/: BUILD.bazel
apps/api/bucket/test/: BUILD.bazel
apps/api/composer/: BUILD.bazel
apps/api/composer/worker/: BUILD.bazel
apps/api/dashboard/: BUILD.bazel
apps/api/dashboard/test/: BUILD.bazel
apps/api/function/: BUILD.bazel
apps/api/function/compiler/javascript/: BUILD.bazel
apps/api/function/compiler/javascript/test/: BUILD.bazel
apps/api/function/compiler/typescript/: BUILD.bazel
apps/api/function/compiler/typescript/test/: BUILD.bazel
apps/api/function/enqueuer/: BUILD.bazel
apps/api/function/enqueuer/test/: BUILD.bazel
apps/api/function/pkgmanager/node/: BUILD.bazel
apps/api/function/pkgmanager/test/node/: BUILD.bazel
apps/api/function/queue/: BUILD.bazel
apps/api/function/queue/node/: BUILD.bazel
apps/api/function/queue/test/: BUILD.bazel
apps/api/function/queue/test/node/: BUILD.bazel
apps/api/function/runtime/io/: BUILD.bazel
apps/api/function/runtime/node/: BUILD.bazel
apps/api/function/runtime/test/io/: BUILD.bazel
apps/api/function/runtime/test/node/: BUILD.bazel
apps/api/function/scheduler/: BUILD.bazel
apps/api/function/scheduler/test/: BUILD.bazel
apps/api/function/src/log/: BUILD.bazel
apps/api/function/src/log/test/: BUILD.bazel
apps/api/function/test/: BUILD.bazel
apps/api/function/test/activity/: BUILD.bazel
apps/api/function/webhook/: BUILD.bazel
apps/api/function/webhook/test/: BUILD.bazel
apps/api/passport/: BUILD.bazel
apps/api/passport/apikey/: BUILD.bazel
apps/api/passport/apikey/test/: BUILD.bazel
apps/api/passport/authfactor/: BUILD.bazel
apps/api/passport/identity/: BUILD.bazel
apps/api/passport/identity/test/: BUILD.bazel
apps/api/passport/policy/: BUILD.bazel
apps/api/passport/test/: BUILD.bazel
apps/api/passport/testing/: BUILD.bazel
apps/api/passport/testing/test/: BUILD.bazel
apps/api/preference/: BUILD.bazel
apps/api/preference/test/: BUILD.bazel
apps/api/preference/testing/: BUILD.bazel
apps/api/src/: BUILD.bazel
apps/api/src/activity/: BUILD.bazel
apps/api/src/activity/services/test/: BUILD.bazel
apps/api/src/activity/test/: BUILD.bazel
apps/api/src/bucket/: BUILD.bazel
apps/api/src/bucket/cache/test/: BUILD.bazel
apps/api/src/bucket/common/: BUILD.bazel
apps/api/src/bucket/common/test/: BUILD.bazel
apps/api/src/bucket/expression/src/: parser.ts
apps/api/src/bucket/expression/test/: BUILD.bazel
apps/api/src/bucket/graphql/: BUILD.bazel
apps/api/src/bucket/graphql/test/: BUILD.bazel
apps/api/src/bucket/history/: BUILD.bazel
apps/api/src/bucket/hooks/: BUILD.bazel
apps/api/src/bucket/hooks/proto/node/: BUILD.bazel
apps/api/src/bucket/hooks/test/: BUILD.bazel
apps/api/src/bucket/realtime/: BUILD.bazel
apps/api/src/bucket/realtime/test/: BUILD.bazel
apps/api/src/bucket/services/: BUILD.bazel
apps/api/src/bucket/services/test/: BUILD.bazel
apps/api/src/bucket/test/: BUILD.bazel
apps/api/src/function/: BUILD.bazel
apps/api/src/function/compiler/javascript/: BUILD.bazel
apps/api/src/function/compiler/javascript/test/: BUILD.bazel
apps/api/src/function/compiler/typescript/: BUILD.bazel
apps/api/src/function/compiler/typescript/test/: BUILD.bazel
apps/api/src/function/enqueuer/: BUILD.bazel
apps/api/src/function/enqueuer/test/: BUILD.bazel
apps/api/src/function/pkgmanager/node/: BUILD.bazel
apps/api/src/function/pkgmanager/test/node/: BUILD.bazel
apps/api/src/function/queue/: BUILD.bazel
apps/api/src/function/queue/node/: BUILD.bazel
apps/api/src/function/queue/test/: BUILD.bazel
apps/api/src/function/queue/test/node/: BUILD.bazel
apps/api/src/function/runtime/io/: BUILD.bazel
apps/api/src/function/runtime/node/: BUILD.bazel
apps/api/src/function/runtime/test/io/: BUILD.bazel
apps/api/src/function/runtime/test/node/: BUILD.bazel
apps/api/src/function/scheduler/: BUILD.bazel
apps/api/src/function/scheduler/test/: BUILD.bazel
apps/api/src/function/src/log/: BUILD.bazel
apps/api/src/function/src/log/test/: BUILD.bazel
apps/api/src/function/test/: BUILD.bazel
apps/api/src/function/test/activity/: BUILD.bazel
apps/api/src/function/webhook/: BUILD.bazel
apps/api/src/function/webhook/test/: BUILD.bazel
apps/api/src/preference/: BUILD.bazel
apps/api/src/preference/test/: BUILD.bazel
apps/api/src/preference/testing/: BUILD.bazel
apps/api/src/status/: BUILD.bazel
apps/api/src/status/services/test/: BUILD.bazel
apps/api/src/status/test/: BUILD.bazel
apps/api/status/: BUILD.bazel
apps/api/status/services/test/: BUILD.bazel
apps/api/status/test/: BUILD.bazel
apps/api/storage/: BUILD.bazel
apps/api/storage/test/: BUILD.bazel
apps/api/storage/test/strategy/: BUILD.bazel
apps/api/versioncontrol/: BUILD.bazel
apps/api/versioncontrol/test/: BUILD.bazel
scripts/: build_local_images.sh  cli_build_and_link.sh  function_link_devkit_packages.sh  publish.sh
tools/ts_project/: index.bzl
(+31 files in other folders)
