load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("//tools/dgeni:index.bzl", "docs")

ts_project(
    name = "bucket",
    package_name = "@spica-server/bucket",
    srcs = glob([
        "src/**/*.ts",
        "src/schemas/*.json",
        "index.ts",
    ]),
    deps = [
        "//packages/core",
        "//packages/core/differ",
        "//packages/core/patch",
        "//packages/core/schema",
        "//packages/database",
        "//packages/interface/representative",
        "//apps/api/activity/services",
        "//apps/api/asset",
        "//apps/api/bucket/cache",
        "//apps/api/bucket/common",
        "//apps/api/bucket/expression",
        "//apps/api/bucket/graphql",
        "//apps/api/bucket/history",
        "//apps/api/bucket/hooks",
        "//apps/api/bucket/hooks/proto",
        "//apps/api/bucket/realtime",
        "//apps/api/bucket/services",
        "//apps/api/passport",
        "//apps/api/passport/guard",
        "//apps/api/preference",
        "//apps/api/preference/services",
        "//apps/api/status",
        "//apps/api/versioncontrol",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@types/json-schema",
        "@npm//@types/mongodb",
        "@npm//@types/node",
        "@npm//cron",
        "@npm//rxjs",
    ],
)

docs(
    name = "docs",
    srcs = glob(["**/*.ts"]),
    doc_name = "bucket",
    tags = ["bucket-docs"],
    exports = [
        "bucket",
        "data",
    ],
    deps = [
        "//packages/database",
        "//apps/api/passport",
    ],
)
