load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("//tools/dgeni:index.bzl", "docs")

ts_project(
    name = "function",
    package_name = "@spica-server/function",
    srcs = glob([
        "src/**/*.ts",
        "src/schema/*.json",
        "index.ts",
    ]),
    deps = [
        "//packages/core",
        "//packages/core/differ",
        "//packages/core/patch",
        "//packages/core/schema",
        "//packages/database",
        "//packages/interface/representative",
        "//apps/api/activity/services",
        "//apps/api/asset",
        "//apps/api/function/enqueuer",
        "//apps/api/function/pkgmanager",
        "//apps/api/function/queue/proto",
        "//apps/api/function/scheduler",
        "//apps/api/function/services",
        "//apps/api/function/src/log",
        "//apps/api/function/webhook",
        "//apps/api/passport/guard",
        "//apps/api/passport/policy",
        "//apps/api/replication",
        "//apps/api/status",
        "//apps/api/versioncontrol",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@nestjs/websockets",
        "@npm//@types/json-schema",
        "@npm//@types/node",
        "@npm//axios",
        "@npm//rimraf",
        "@npm//rxjs",
        "@npm//typescript",
    ],
)

docs(
    name = "docs",
    srcs = [
        "src/function.controller.ts",
    ],
    doc_name = "function",
    tags = ["function-docs"],
    exports = [
        "Function",
    ],
    deps = [
        "//packages/database",
    ],
)
