load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

ts_project(
    name = "asset_unit_test_lib",
    testonly = True,
    srcs = [
        "helpers.spec.ts",
    ],
    deps = [
        "//apps/api/asset",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ],
)

jasmine_node_test(
    name = "asset_unit_test",
    deps = [
        ":asset_unit_test_lib",
    ],
)

ts_project(
    name = "asset_core_test_lib",
    testonly = True,
    srcs = [
        "e2e.spec.ts",
    ],
    deps = [
        "//packages/core/testing",
        "//packages/database/testing",
        "//apps/api/asset",
        "//apps/api/passport/testing",
        "//apps/api/replication/testing",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ],
)

jasmine_node_test(
    name = "asset_core_test",
    deps = [
        ":asset_core_test_lib",
    ],
)

ts_project(
    name = "asset_e2e_test_lib",
    testonly = True,
    srcs = glob(["*.e2e.spec.ts"]),
    deps = [
        "//packages/core/schema",
        "//packages/core/testing",
        "//packages/database/testing",
        "//apps/api/asset",
        "//apps/api/bucket",
        "//apps/api/dashboard",
        "//apps/api/passport/testing",
        "//apps/api/preference/testing",
        "//apps/api/replication/testing",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ],
)

jasmine_node_test(
    name = "asset_e2e_test",
    tags = [
        "flaky",
    ],
    deps = [
        ":asset_e2e_test_lib",
    ],
)
