load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "graphql",
    package_name = "@spica-server/bucket/graphql",
    srcs = glob([
        "src/*.ts",
    ]) + ["index.ts"],
    deps = [
        "//packages/core/patch",
        "//packages/core/schema",
        "//packages/database",
        "//apps/api/activity/services",
        "//apps/api/bucket/common",
        "//apps/api/bucket/history",
        "//apps/api/bucket/hooks",
        "//apps/api/bucket/services",
        "//apps/api/passport",
        "//apps/api/passport/guard",
        "@npm//@graphql-tools/merge",
        "@npm//@graphql-tools/schema",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//express-graphql",
        "@npm//graphql",
    ],
)
