load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "realtime",
    package_name = "@spica-server/bucket/realtime",
    srcs = glob([
        "src/*.ts",
        "index.ts",
    ]),
    deps = [
        "//packages/core/patch",
        "//packages/core/schema",
        "//packages/database",
        "//packages/database/realtime",
        "//apps/api/activity/services",
        "//apps/api/bucket/cache",
        "//apps/api/bucket/common",
        "//apps/api/bucket/expression",
        "//apps/api/bucket/history",
        "//apps/api/bucket/hooks",
        "//apps/api/bucket/services",
        "//apps/api/passport",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@nestjs/websockets",
        "@npm//rxjs",
    ],
)
