load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

ts_project(
    name = "bucket_data_acceptance_test_lib",
    testonly = True,
    srcs = [
        "bucket-data.controller.spec.ts",
    ],
    deps = [
        "//packages/core",
        "//packages/core/schema",
        "//packages/core/testing",
        "//packages/core/websocket",
        "//packages/database/testing",
        "//apps/api/bucket",
        "//apps/api/bucket/services",
        "//apps/api/passport/testing",
        "//apps/api/preference/testing",
        "@npm//@nestjs/common",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ],
)

jasmine_node_test(
    name = "bucket_data_acceptance_test",
    deps = [
        ":bucket_data_acceptance_test_lib",
    ],
)

ts_project(
    name = "bucket_acceptance_test_lib",
    testonly = True,
    srcs = [
        "bucket.controller.spec.ts",
    ],
    deps = [
        "//packages/core",
        "//packages/core/schema",
        "//packages/core/testing",
        "//packages/core/websocket",
        "//packages/database/testing",
        "//apps/api/bucket",
        "//apps/api/passport/testing",
        "//apps/api/preference/testing",
        "@npm//@nestjs/common",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ],
)

jasmine_node_test(
    name = "bucket_acceptance_test",
    deps = [
        ":bucket_acceptance_test_lib",
    ],
)

ts_project(
    name = "bucket_schema_resolver_test_lib",
    testonly = True,
    srcs = [
        "bucket.schema.resolver.spec.ts",
    ],
    deps = [
        "//packages/core",
        "//packages/core/schema",
        "//packages/core/testing",
        "//packages/database/testing",
        "//apps/api/bucket",
        "//apps/api/bucket/services",
        "//apps/api/preference/testing",
        "@npm//@nestjs/common",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//rxjs",
    ],
)

jasmine_node_test(
    name = "bucket_schema_resolver_test",
    deps = [
        ":bucket_schema_resolver_test_lib",
    ],
)

ts_project(
    name = "bucket_module_test_lib",
    testonly = True,
    srcs = ["bucket.module.spec.ts"],
    deps = [
        "//packages/core/schema",
        "//packages/database/testing",
        "//apps/api/bucket",
        "//apps/api/bucket/cache",
        "//apps/api/bucket/history",
        "//apps/api/bucket/hooks",
        "//apps/api/passport/testing",
        "//apps/api/preference/testing",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "bucket_module_test",
    deps = [
        ":bucket_module_test_lib",
    ],
)

ts_project(
    name = "activity_test_lib",
    testonly = True,
    srcs = [
        "activity.resource.spec.ts",
    ],
    deps = [
        "//apps/api/activity/services",
        "//apps/api/bucket",
        "//apps/api/bucket/common",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "activity_test",
    deps = [
        "activity_test_lib",
    ],
)
