load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "scheduler",
    package_name = "@spica-server/function/scheduler",
    srcs = glob([
        "src/*.ts",
        "index.ts",
    ]),
    deps = [
        "//packages/core",
        "//packages/database",
        "//apps/api/function/compiler",
        "//apps/api/function/compiler/javascript",
        "//apps/api/function/compiler/typescript",
        "//apps/api/function/enqueuer",
        "//apps/api/function/pkgmanager",
        "//apps/api/function/pkgmanager/node",
        "//apps/api/function/queue",
        "//apps/api/function/queue/proto",
        "//apps/api/function/runtime",
        "//apps/api/function/runtime/io",
        "//apps/api/function/runtime/node",
        "//apps/api/replication",
        "//apps/api/status/services",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@types/node",
        "@npm//uniqid",
    ],
)
