load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "apikey",
    package_name = "@spica-server/passport/apikey",
    srcs = glob([
        "index.ts",
        "src/*.ts",
        "src/schemas/*.json",
    ]),
    deps = [
        "//packages/core",
        "//packages/core/schema",
        "//packages/database",
        "//apps/api/activity/services",
        "//apps/api/asset",
        "//apps/api/passport/guard",
        "//apps/api/passport/policy",
        "@npm//@nestjs/common",
        "@npm//@nestjs/passport",
        "@npm//passport-jwt",
        "@npm//uniqid",
    ],
)
