load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

ts_project(
    name = "e2e_test_lib",
    testonly = True,
    srcs = [
        "e2e.spec.ts",
    ],
    deps = [
        "//packages/core/schema",
        "//packages/core/testing",
        "//packages/database/testing",
        "//apps/api/passport",
        "//apps/api/passport/identity",
        "//apps/api/passport/policy",
        "//apps/api/passport/testing",
        "//apps/api/preference/testing",
        "//apps/api/replication/testing",
        "@npm//@nestjs/common",
        "@npm//@nestjs/jwt",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
        "@npm//jsqr",
        "@npm//pngjs",
        "@npm//samlp",
        "@npm//speakeasy",
        "@npm//xpath",
    ],
)

jasmine_node_test(
    name = "e2e_test",
    tags = [
        "flaky",
    ],
    deps = [
        ":e2e_test_lib",
    ],
)
