load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "testing",
    package_name = "@spica-server/passport/testing",
    testonly = True,
    srcs = glob([
        "index.ts",
        "src/*.ts",
    ]),
    deps = [
        "//apps/api/passport",
        "//apps/api/passport/authfactor",
        "//apps/api/replication/testing",
        "@npm//@nestjs/common",
        "@npm//@nestjs/passport",
    ],
)
