load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

ts_project(
    name = "services_specs",
    testonly = True,
    srcs = [
        "services/preference.service.spec.ts",
    ],
    deps = [
        "//packages/core",
        "//packages/core/testing",
        "//packages/database/testing",
        "//apps/api/preference/services",
        "@npm//@nestjs/common",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//rxjs",
    ],
)

jasmine_node_test(
    name = "service_test",
    tags = ["flaky"],
    deps = [
        ":services_specs",
    ],
)

ts_project(
    name = "acceptance_specs",
    testonly = True,
    srcs = [
        "preference.acceptance.spec.ts",
    ],
    deps = [
        "//packages/core",
        "//packages/core/testing",
        "//packages/database/testing",
        "//apps/api/passport/testing",
        "//apps/api/preference",
        "@npm//@nestjs/common",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//rxjs",
    ],
)

jasmine_node_test(
    name = "acceptance_test",
    deps = [
        ":acceptance_specs",
    ],
)

ts_project(
    name = "integration_specs",
    testonly = True,
    srcs = [
        "preference.integration.spec.ts",
    ],
    deps = [
        "//packages/core",
        "//packages/core/schema",
        "//packages/core/testing",
        "//packages/database/testing",
        "//apps/api/bucket",
        "//apps/api/passport/identity",
        "//apps/api/passport/policy",
        "//apps/api/passport/testing",
        "//apps/api/preference",
        "//apps/api/preference/services",
        "@npm//@nestjs/common",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ],
)

jasmine_node_test(
    name = "integration_test",
    tags = ["e2e"],
    deps = [
        ":integration_specs",
    ],
)

ts_project(
    name = "tests",
    testonly = True,
    srcs = [
        "activity.resource.spec.ts",
    ],
    deps = [
        "//apps/api/activity/services",
        "//apps/api/preference",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [
        ":tests",
    ],
)
