load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("//tools/dgeni:index.bzl", "docs")

ts_project(
    name = "function",
    package_name = "@spica-server/function",
    srcs = glob([
        "src/**/*.ts",
        "src/schema/*.json",
        "index.ts",
    ]),
    deps = [
        "//packages/core",
        "//packages/core/differ",
        "//packages/core/patch",
        "//packages/core/schema",
        "//packages/database",
        "//packages/interface/representative",
        "//apps/api/src/activity/services",
        "//apps/api/src/asset",
        "//apps/api/src/function/enqueuer",
        "//apps/api/src/function/pkgmanager",
        "//apps/api/src/function/queue/proto",
        "//apps/api/src/function/scheduler",
        "//apps/api/src/function/services",
        "//apps/api/src/function/src/log",
        "//apps/api/src/function/webhook",
        "//apps/api/src/passport/guard",
        "//apps/api/src/passport/policy",
        "//apps/api/src/replication",
        "//apps/api/src/status",
        "//apps/api/src/versioncontrol",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@nestjs/websockets",
        "@npm//@types/json-schema",
        "@npm//@types/node",
        "@npm//axios",
        "@npm//rimraf",
        "@npm//rxjs",
        "@npm//typescript",
    ],
)

docs(
    name = "docs",
    srcs = [
        "src/function.controller.ts",
    ],
    doc_name = "function",
    tags = ["function-docs"],
    exports = [
        "Function",
    ],
    deps = [
        "//packages/database",
    ],
)
