load("//tools/ts_project:index.bzl", "ts_project")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

ts_project(
    name = "status_e2e_test_lib",
    testonly = True,
    srcs = [
        "controller.spec.ts",
    ],
    deps = [
        "//packages/core",
        "//packages/core/schema",
        "//packages/core/testing",
        "//packages/core/websocket",
        "//packages/database/testing",
        "//apps/api/bucket",
        "//apps/api/function",
        "//apps/api/passport/identity",
        "//apps/api/passport/policy",
        "//apps/api/passport/testing",
        "//apps/api/preference/testing",
        "//apps/api/replication/testing",
        "//apps/api/status",
        "//apps/api/storage",
        "@npm//@nestjs/common",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//bson",
    ],
)

jasmine_node_test(
    name = "status_e2e_test",
    tags = ["flaky"],
    deps = [
        ":status_e2e_test_lib",
    ],
)
