load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

ts_project(
    name = "test_lib",
    testonly = True,
    srcs = [
        "storage.acceptance.spec.ts",
        "storage.module.spec.ts",
        "storage.service.spec.ts",
    ],
    deps = [
        "//packages/core",
        "//packages/core/testing",
        "//packages/database/testing",
        "//apps/api/passport/testing",
        "//apps/api/storage",
        "@npm//@nestjs/common",
        "@npm//@nestjs/testing",
        "@npm//@types/bson",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//bson",
        "@npm//etag",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [
        ":test_lib",
    ],
)

ts_project(
    name = "activity_test_lib",
    testonly = True,
    srcs = [
        "activity.resource.spec.ts",
    ],
    deps = [
        "//apps/api/activity/services",
        "//apps/api/storage",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "activity_test",
    deps = [
        "activity_test_lib",
    ],
)
