load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

ts_project(
    name = "test_lib",
    testonly = True,
    srcs = [
        "representative.spec.ts",
        "synchronizer.spec.ts",
    ],
    deps = [
        "//apps/api/versioncontrol",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "test",
    srcs = [":test_lib"],
)

ts_project(
    name = "test_lib_integration",
    testonly = True,
    srcs = [
        "integration.spec.ts",
    ],
    deps = [
        "//packages/core/testing",
        "//packages/database/testing",
        "//apps/api/bucket",
        "//apps/api/function",
        "//apps/api/passport/testing",
        "//apps/api/preference/testing",
        "//apps/api/replication/testing",
        "//apps/api/versioncontrol",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "test_integration",
    srcs = [":test_lib_integration"],
)

# https://dreamharvesters.atlassian.net/browse/SP-830
# ts_project(
#     name = "test_lib_e2e",
#     testonly = True,
#     srcs = [
#         "e2e.spec.ts",
#     ],
#     deps = [
#         "//packages/core",
#         "//packages/core/schema",
#         "//packages/core/testing",
#         "//packages/core/websocket",
#         "//packages/database/testing",
#         "//apps/api/bucket",
#         "//apps/api/function",
#         "//apps/api/passport/testing",
#         "//apps/api/preference/testing",
#         "//apps/api/versioncontrol",
#         "@npm//@nestjs/common",
#         "@npm//@nestjs/testing",
#         "@npm//@types/jasmine",
#     ],
# )

# jasmine_node_test(
#     name = "test_e2e",
#     srcs = [":test_lib_e2e"],
#     tags = [
#         "e2e",
#     ],
# )
