load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

ts_project(
    name = "hook_test_lib",
    testonly = True,
    srcs = [
        "enqueuer.spec.ts",
        "module.spec.ts",
    ],
    deps = [
        "//packages/core/schema",
        "//packages/database",
        "//packages/database/testing",
        "//apps/api/bucket/hooks",
        "//apps/api/bucket/hooks/proto",
        "//apps/api/bucket/hooks/proto/node",
        "//apps/api/bucket/services",
        "//apps/api/function",
        "//apps/api/function/queue",
        "//apps/api/function/queue/proto",
        "//apps/api/preference/testing",
        "@npm//@nestjs/common",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
        "@npm//rxjs",
    ],
)

jasmine_node_test(
    name = "hook_test",
    deps = [
        ":hook_test_lib",
    ],
)

ts_project(
    name = "integration_test_lib",
    testonly = True,
    srcs = [
        "integration.spec.ts",
    ],
    deps = [
        "//packages/core",
        "//packages/core/testing",
        "//packages/core/websocket",
        "//packages/database/testing",
        "//apps/api/bucket",
        "//apps/api/bucket/services",
        "//apps/api/function",
        "//apps/api/function/services",
        "//apps/api/passport/testing",
        "//apps/api/preference/testing",
        "//apps/api/replication/testing",
        "@npm//@nestjs/common",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ],
)

jasmine_node_test(
    name = "integration_test",
    tags = [
        "e2e",
    ],
    deps = [
        ":integration_test_lib",
    ],
)
