load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

ts_project(
    name = "node",
    package_name = "@spica-server/function/runtime/node",
    srcs = [
        "index.ts",
        "node.ts",
    ],
    data = [
        ":runtime",
    ],
    deps = [
        "//apps/api/function/runtime",
        "@npm//@types/node",
    ],
)

pkg_npm(
    name = "runtime",
    srcs = [
        "package.json",
    ],
    validate = False,
    deps = [
        ":entrypoint",
    ],
)

rollup_bundle(
    name = "entrypoint",
    srcs = [
        "experimental_database.js",
    ],
    config_file = "rollup.config.js",
    entry_points = {
        ":entrypoint.js": "bootstrap",
    },
    format = "esm",
    output_dir = True,
    sourcemap = "true",
    deps = [
        "//apps/api/bucket/hooks/proto",
        "//apps/api/bucket/hooks/proto/node",
        "//apps/api/function/packages/database",
        "//apps/api/function/queue/node",
        "//apps/api/function/queue/proto",
        "//apps/api/function/runtime/logger",
        "@npm//@grpc/grpc-js",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-json",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//rollup-plugin-terser",
    ],
)
