load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

ts_project(
    name = "scheduler",
    testonly = True,
    srcs = glob(["*.ts"]),
    deps = [
        "//packages/database/testing",
        "//apps/api/function/queue",
        "//apps/api/function/queue/proto",
        "//apps/api/function/runtime",
        "//apps/api/function/runtime/testing",
        "//apps/api/function/scheduler",
        "//apps/api/replication/testing",
        "@npm//@nestjs/common",
        "@npm//@nestjs/platform-express",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//express",
    ],
)

jasmine_node_test(
    name = "scheduler_test",
    srcs = [":scheduler"],
    tags = ["flaky"],
)
