load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

ts_project(
    name = "controller_test_lib",
    testonly = True,
    srcs = [
        "apikey.controller.spec.ts",
    ],
    deps = [
        "//packages/core/testing",
        "//packages/database/testing",
        "//apps/api/passport/apikey",
        "//apps/api/passport/testing",
        "//apps/api/preference/testing",
        "@npm//@nestjs/common",
        "@npm//@nestjs/testing",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "controller_test",
    deps = [
        ":controller_test_lib",
    ],
)

ts_project(
    name = "unit_test_lib",
    testonly = True,
    srcs = [
        "activity.resource.spec.ts",
        "utility.spec.ts",
    ],
    deps = [
        "//apps/api/activity/services",
        "//apps/api/passport/apikey",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "unit_test",
    deps = [
        ":unit_test_lib",
    ],
)
